--- a/src/components/PostInList.css
+++ b/src/components/PostInList.css
@@ -6,8 +6,31 @@
 
 .PostInList {
     font-family: 'Dosis', sans-serif;
+    /* border-bottom: 2px solid lightgray;
+    border-width: 100%; */
+   
 }
 
 button {
     font-family: 'Dosis', sans-serif;
+    
+}
+h2{
+    margin: 0;
+    padding-left: 25px;
+}
+p {
+    margin: 0;
+    padding-left: 25px;
+}
+i.material-icons {
+    position: absolute;
+    right: 5px;
+}
+.postContainer {
+    position: relative;
+    width: 600px;
+    height: auto;
+    background-color: white;
+    border: 2px solid black;
 }
